Fixed the error code when the user dont have privilegies to edit something from 400 to 401 (Unauthorized). Fixed the image controller.
